--- a/project-4-authentication/package.json
+++ b/project-4-authentication/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 8080 --strictPort",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --port 8080 --strictPort"
+    "preview": "vite preview"
   },
   "dependencies": {
     "miragejs": "^0.1.47",
